--- a/db/configurations/goodmoves/partials/search-form.hbs
+++ b/db/configurations/goodmoves/partials/search-form.hbs
@@ -18,108 +18,94 @@
 </div>
 {{/inline}}
 
-<!-- <header class="mdc-drawer__header hide-md hide-lg">
-  <div class="mdc-drawer__header-content mdc-theme--primary-bg">
-    <h2 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary hide-sm">Search jobs</h2>
+<aside class="mdc-drawer mdc-drawer--permanent mdc-elevation--z8">
+  <div class="mdc-drawer__content">
+    <h2 class="mdc-drawer__content-heading mdc-theme--secondary-bg mdc-theme--on-primary hide-sm">Search jobs</h2>
     <div id="search-tab-bar" class="mdc-tab-bar fullwidth" data-mdc-auto-init="MDCTabBar">
-      <a class="mdc-tab" href="#map" onclick="mapView()">
-        <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
-        Map
-      </a>
-      <a class="mdc-tab mdc-tab--active" href="#details" id="detailed-results" onclick="detailsView()">
+      <a class="mdc-tab mdc-tab--active" id="detailed-results" onclick="detailsView()">
         <span class="far fa-list fa-fw" title="Location"></span>
         List
       </a>
+      <a class="mdc-tab" onclick="mapView()">
+        <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
+        Map
+      </a>
       <span class="mdc-tab-bar__indicator"></span>
     </div>
+    <form action="/search" method="GET">
+      <div class="h-padding">
+        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+          <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">Keywords</label>
+          <div class="mdc-notched-outline">
+            <svg>
+              <path class="mdc-notched-outline__path"/>
+            </svg>
+          </div>
+          <div class="mdc-notched-outline__idle"></div>
+        </div>
+      </div>
+
+      <div class="h-padding">
+        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+          <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}" placeholder="">
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-location">Location</label>
+          <div class="mdc-notched-outline">
+            <svg>
+              <path class="mdc-notched-outline__path"/>
+            </svg>
+          </div>
+          <div class="mdc-notched-outline__idle"></div>
+        </div>
+      </div>
+
+      <input type="hidden" name="lat" value="{{request.params.query.lat}}">
+      <input type="hidden" name="lng" value="{{request.params.query.lng}}">
+
+      <div class="h-padding">
+        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+          <input type="text" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_min">Minimum Salary</label>
+          <div class="mdc-notched-outline">
+            <svg>
+              <path class="mdc-notched-outline__path"/>
+            </svg>
+          </div>
+          <div class="mdc-notched-outline__idle"></div>
+        </div>
+      </div>
+
+      <div class="h-padding">
+        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+          <input type="text" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_max">Maximum Salary</label>
+          <div class="mdc-notched-outline">
+            <svg>
+              <path class="mdc-notched-outline__path"/>
+            </svg>
+          </div>
+          <div class="mdc-notched-outline__idle"></div>
+        </div>
+      </div>
+
+      <h3 class="mdc-drawer__content-heading mdc-theme--secondary-bg mdc-theme--on-primary">Roles</h3>
+      {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
+      {{> term_checkbox key=key field="roles" selected=../request.params.query.roles}}
+      {{/each ~}}
+
+      <h3 class="mdc-drawer__content-heading mdc-theme--secondary-bg mdc-theme--on-primary">Sectors</h3>
+      {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
+      {{> term_checkbox key=key field="sectors" selected=../request.params.query.sectors}}
+      {{/each ~}}
+
+      <h3 class="mdc-drawer__content-heading mdc-theme--secondary-bg mdc-theme--on-primary">Statuses</h3>
+      {{#each data.supplimentaryResponses.types.aggregations.statuses.buckets ~}}
+      {{> term_checkbox key=key field="role_status" selected=../request.params.query.role_status}}
+      {{/each ~}}
+
+      <button class="mdc-button mdc-button--raised mdc-button--fullwidth h-margin v-margin" type="submit">
+        Search jobs
+      </button>
+    </form>
   </div>
-</header> -->
-<div class="mdc-drawer__content">
-  <h2 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary hide-sm">Search jobs</h2>
-  <div id="search-tab-bar" class="mdc-tab-bar fullwidth" data-mdc-auto-init="MDCTabBar">
-    <a class="mdc-tab" onclick="mapView()">
-      <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
-      Map
-    </a>
-    <a class="mdc-tab mdc-tab--active" id="detailed-results" onclick="detailsView()">
-      <span class="far fa-list fa-fw" title="Location"></span>
-      List
-    </a>
-    <span class="mdc-tab-bar__indicator"></span>
-  </div>
-  <form action="/search" method="GET">
-    <div class="h-padding">
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">Keywords</label>
-        <div class="mdc-notched-outline">
-          <svg>
-            <path class="mdc-notched-outline__path"/>
-          </svg>
-        </div>
-        <div class="mdc-notched-outline__idle"></div>
-      </div>
-    </div>
-
-    <div class="h-padding">
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-location">Location</label>
-        <div class="mdc-notched-outline">
-          <svg>
-            <path class="mdc-notched-outline__path"/>
-          </svg>
-        </div>
-        <div class="mdc-notched-outline__idle"></div>
-      </div>
-    </div>
-
-    <input type="hidden" name="lat" value="{{request.params.query.lat}}">
-    <input type="hidden" name="lng" value="{{request.params.query.lng}}">
-
-    <div class="h-padding">
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input type="text" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_min">Minimum Salary</label>
-        <div class="mdc-notched-outline">
-          <svg>
-            <path class="mdc-notched-outline__path"/>
-          </svg>
-        </div>
-        <div class="mdc-notched-outline__idle"></div>
-      </div>
-    </div>
-
-    <div class="h-padding">
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input type="text" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_max">Maximum Salary</label>
-        <div class="mdc-notched-outline">
-          <svg>
-            <path class="mdc-notched-outline__path"/>
-          </svg>
-        </div>
-        <div class="mdc-notched-outline__idle"></div>
-      </div>
-    </div>
-
-    <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Roles</h3>
-    {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
-    {{> term_checkbox key=key field="roles" selected=../request.params.query.roles}}
-    {{/each ~}}
-
-    <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Sectors</h3>
-    {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
-    {{> term_checkbox key=key field="sectors" selected=../request.params.query.sectors}}
-    {{/each ~}}
-
-    <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Statuses</h3>
-    {{#each data.supplimentaryResponses.types.aggregations.statuses.buckets ~}}
-    {{> term_checkbox key=key field="role_status" selected=../request.params.query.role_status}}
-    {{/each ~}}
-
-    <button class="mdc-button mdc-button--raised mdc-button--fullwidth h-margin v-margin" type="submit">
-      Search jobs
-    </button>
-  </form>
-</div>
+</aside>
