--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -850,8 +850,11 @@ footer {
   rgb(30, 59, 18) 96.08%,
   rgb(30, 59, 18)
   );
+  .footer-main,
+  .footer-copyright {
+    padding: 0 $unit;
+  }
   .footer-main {
-    padding: 0;
     margin-bottom: $unit/2;
   }
   h3 {
@@ -945,7 +948,7 @@ footer {
   }
   .footer-copyright {
     background-color: $mdc-theme-primary-dark;
-    padding: $unit 0 $unit*0.7;
+    padding: $unit $unit $unit*0.7;
     margin: 0;
     line-height: 1.2;
     font-size: 0.9rem;
