--- a/db/configurations/goodmoves/templates/jobs/search.hbs
+++ b/db/configurations/goodmoves/templates/jobs/search.hbs
@@ -2,8 +2,6 @@
 
 {{> search_form this instance_id="perm"}}
 
-<div class="goodmoves-job-search">
-  <div id="detailed-results-container">
-    {{> search_results this}}
-  </div>
+<div id="detailed-results-container" class="container-content goodmoves-job-search">
+  {{> search_results this}}
 </div>
