--- a/db/configurations/goodmoves/partials/search-form.hbs
+++ b/db/configurations/goodmoves/partials/search-form.hbs
@@ -21,7 +21,7 @@
 <aside class="mdc-drawer mdc-drawer--permanent mdc-elevation--z8">
   <div class="mdc-drawer__content">
     <h2 class="mdc-drawer__content-heading mdc-theme--secondary-bg mdc-theme--on-primary hide-sm">Search jobs</h2>
-    <div id="search-tab-bar" class="mdc-tab-bar fullwidth" data-mdc-auto-init="MDCTabBar">
+    <div id="search-tab-bar" class="mdc-tab-bar mdc-tab-bar--fullwidth" data-mdc-auto-init="MDCTabBar">
       <a class="mdc-tab mdc-tab--active" id="detailed-results" onclick="detailsView()">
         <span class="far fa-list fa-fw" title="Location"></span>
         List
@@ -47,15 +47,35 @@
       </div>
 
       <div class="h-padding">
-        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-          <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}" placeholder="">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-location">Location</label>
-          <div class="mdc-notched-outline">
-            <svg>
-              <path class="mdc-notched-outline__path"/>
-            </svg>
+        <div class="mdc-layout-grid">
+          <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone">
+              <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+                <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}" placeholder="">
+                <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-location">Location</label>
+                <div class="mdc-notched-outline">
+                  <svg>
+                    <path class="mdc-notched-outline__path"/>
+                  </svg>
+                </div>
+                <div class="mdc-notched-outline__idle"></div>
+              </div>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone">
+              <div class="mdc-form-field">
+                <div class="mdc-select" data-mdc-auto-init="MDCSelect">
+                  <select class="mdc-select__native-control" id="distance">
+                    <option value="8046.72" selected>within 5 miles</option>
+                    <option value="16093.44">within 10 miles</option>
+                    <option value="40233.6">within 25 miles</option>
+                    <option value="80467.2">within 50 miles</option>
+                    <option value="any">any distance</option>
+                  </select>
+                  <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">Distance</label>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="mdc-notched-outline__idle"></div>
         </div>
       </div>
 
