--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -1,62 +1,162 @@
 <div class="container-fluid">
-  <div class="mdc-layout-grid">
+  <div class="mdc-layout-grid banner-search">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-phone">
-        <div class="">
-          <h2 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary hide-sm">Search jobs</h2>
-          <section id="search-overlay" class="search-overlay-panel">
-            <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-              <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
-              <label class="mdc-floating-label mdc-floating-label--float-above" for="what">What</label>
-              <div class="mdc-notched-outline">
-                <svg>
-                  <path class="mdc-notched-outline__path"/>
-                </svg>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+        <div class="mdc-typography--headline3 v-margin-full">
+          Charity and voluntary sector recruitment
+        </div>
+        <div id="home-tab-bar" class="mdc-tab-bar mdc-tab-bar--left" data-mdc-auto-init="MDCTabBar">
+          <a class="mdc-tab mdc-tab--active" onclick="searchViewJobs()">
+            <span class="far fa-search mdc-list-item__graphic" title="Jobs"></span>
+            Jobs
+          </a>
+          <a class="mdc-tab" onclick="searchViewOrganisations()">
+            <span class="far fa-building mdc-list-item__graphic" title="Organisations"></span>
+            Organisations
+          </a>
+          <a class="mdc-tab" onclick="searchViewAdvice()">
+            <span class="far fa-question-circle mdc-list-item__graphic" title="Advice"></span>
+            Advice
+          </a>
+          <span class="mdc-tab-bar__indicator"></span>
+        </div>
+        <div id="search-view-jobs" class="search-form">
+          <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
+                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what">Jobs</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
+                <div id="search-terms" class="mdc-chip-set"></div>
               </div>
-              <div class="mdc-notched-outline__idle"></div>
-            </div>
-            <div id="search-terms" class="mdc-chip-set"></div>
-            <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-              <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where" placeholder="">
-              <label class="mdc-floating-label mdc-floating-label--float-above" for="where">Where</label>
-              <div class="mdc-notched-outline">
-                <svg>
-                  <path class="mdc-notched-outline__path"/>
-                </svg>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-phone">
+                <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where" placeholder="">
+                  <label class="mdc-floating-label mdc-floating-label--float-above" for="where">Location</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
               </div>
-              <div class="mdc-notched-outline__idle"></div>
-            </div>
-            <div class="mdc-form-field">
-              <div class="mdc-select" data-mdc-auto-init="MDCSelect">
-                <select class="mdc-select__native-control fullwidth" id="distance">
-                  <option value="any">Any distance</option>
-                  <option value="1609.344">1 mile</option>
-                  <option value="3218.688">2 miles</option>
-                  <option value="8046.72" selected>5 miles</option>
-                  <option value="16093.44">10 miles</option>
-                  <option value="24140.16">15 miles</option>
-                  <option value="40233.6">25 miles</option>
-                  <option value="80467.2">50 miles</option>
-                </select>
-                <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">Distance</label>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
+                <div class="mdc-form-field">
+                  <div class="mdc-select" data-mdc-auto-init="MDCSelect">
+                    <select class="mdc-select__native-control" id="distance">
+                      <option value="8046.72" selected>within 5 miles</option>
+                      <option value="16093.44">within 10 miles</option>
+                      <option value="40233.6">within 25 miles</option>
+                      <option value="80467.2">within 50 miles</option>
+                      <option value="any">any distance</option>
+                    </select>
+                    <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">Distance</label>
+                  </div>
+                </div>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
+                <button class="mdc-button mdc-button--raised mdc-button--search">
+                  Search
+                  <span class="far fa-search" aria-hidden="true"></span>
+                </button>
               </div>
             </div>
-          </section>
+          </div>
+        </div>
+        <div id="search-view-organisations" class="search-form" style="display: none;">
+          <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
+                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what">Organisations</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
+                <button class="mdc-button mdc-button--raised mdc-button--search">
+                  Search
+                  <span class="far fa-search" aria-hidden="true"></span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="search-view-advice" class="search-form" style="display: none;">
+          <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
+                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what">Advice</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
+                <button class="mdc-button mdc-button--raised mdc-button--search">
+                  Search
+                  <span class="far fa-search" aria-hidden="true"></span>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <p>Your saved searches (if authenticated)</p>
-
-  <p>Your shortlist (if authenticated)</p>
-
-  <p>Top jobs</p>
-
-  <p>Latest jobs</p>
-
+  <div class="mdc-layout-grid h-margin-full">
+    <!-- <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
+        <div class="mdc-typography--headline5 v-margin-full">
+          Your saved searches (if authenticated)
+        </div>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
+        <div class="mdc-typography--headline5 v-margin-full">
+          Your shortlist (if authenticated)
+        </div>
+      </div>
+    </div> -->
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
+        <div class="mdc-typography--headline5 v-margin-full">
+          Top jobs
+        </div>
+        {{#each data.jobs.top.hits.hits ~}}
+        {{> vacancy_search_result _source}}
+        {{/each ~}}
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
+        <div class="mdc-typography--headline5 v-margin-full">
+          Latest jobs
+        </div>
+        {{#each data.jobs.latest.hits.hits ~}}
+        {{> vacancy_search_result _source}}
+        {{/each ~}}
+      </div>
+    </div>
+  </div>
 </div>
 
 {{> currently_recruiting}}
