--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -26,7 +26,7 @@
           <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+                <!-- <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
                   <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
                   <label class="mdc-floating-label mdc-floating-label--float-above" for="what">Jobs</label>
                   <div class="mdc-notched-outline">
@@ -35,11 +35,20 @@
                     </svg>
                   </div>
                   <div class="mdc-notched-outline__idle"></div>
+                </div> -->
+                <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+                  <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
+                  <input type="text" id="what-jobs" class="mdc-text-field__input">
+                  <label for="what-jobs" class="mdc-floating-label">Keywords</label>
+                  <div class="mdc-line-ripple"></div>
                 </div>
+                <p id="what-jobs-helper-text" class="mdc-text-field-helper-text" aria-hidden="true">
+                  e.g. Fundraising, Carer, Manager
+                </p>
                 <div id="search-terms" class="mdc-chip-set"></div>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-phone">
-                <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+                <!-- <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
                   <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where" placeholder="">
                   <label class="mdc-floating-label mdc-floating-label--float-above" for="where">Location</label>
                   <div class="mdc-notched-outline">
@@ -48,24 +57,33 @@
                     </svg>
                   </div>
                   <div class="mdc-notched-outline__idle"></div>
+                </div> -->
+                <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+                  <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
+                  <input type="text" id="where-jobs" class="mdc-text-field__input" placeholder=" ">
+                  <label for="where-jobs" class="mdc-floating-label">Location</label>
+                  <div class="mdc-line-ripple"></div>
                 </div>
+                <p id="where-jobs-helper-text" class="mdc-text-field-helper-text" aria-hidden="true">
+                  e.g. Glasgow, Edinburgh, Inverness
+                </p>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
                 <div class="mdc-form-field">
-                  <div class="mdc-select" data-mdc-auto-init="MDCSelect">
-                    <select class="mdc-select__native-control" id="distance">
+                  <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
+                    <select class="mdc-select__native-control" id="distance-jobs">
                       <option value="8046.72" selected>within 5 miles</option>
                       <option value="16093.44">within 10 miles</option>
                       <option value="40233.6">within 25 miles</option>
                       <option value="80467.2">within 50 miles</option>
                       <option value="any">any distance</option>
                     </select>
-                    <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">Distance</label>
+                    <label class="mdc-floating-label mdc-floating-label--float-above" for="distance-jobs">Distance</label>
                   </div>
                 </div>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
-                <button class="mdc-button mdc-button--raised mdc-button--search">
+                <button class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search">
                   Search
                   <span class="far fa-search" aria-hidden="true"></span>
                 </button>
@@ -78,8 +96,8 @@
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
                 <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
-                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what">Organisations</label>
+                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what-organisations">
+                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what-organisations">Organisations</label>
                   <div class="mdc-notched-outline">
                     <svg>
                       <path class="mdc-notched-outline__path"/>
@@ -102,8 +120,8 @@
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
                 <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
-                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what">Advice</label>
+                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what-advice">
+                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what-advice">Advice</label>
                   <div class="mdc-notched-outline">
                     <svg>
                       <path class="mdc-notched-outline__path"/>
@@ -125,7 +143,7 @@
     </div>
   </div>
 
-  <div class="mdc-layout-grid h-margin-full">
+  <div class="mdc-layout-grid home-jobs">
     <!-- <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
         <div class="mdc-typography--headline5 v-margin-full">
