Added initial currently recruiting

--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="mdc-layout-grid banner-search">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-0-phone">
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
         <div class="mdc-typography--headline3 v-margin-full">
           Charity and voluntary sector recruitment
         </div>
@@ -26,20 +26,12 @@
           <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                <!-- <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
-                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what">Jobs</label>
-                  <div class="mdc-notched-outline">
-                    <svg>
-                      <path class="mdc-notched-outline__path"/>
-                    </svg>
-                  </div>
-                  <div class="mdc-notched-outline__idle"></div>
-                </div> -->
                 <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                   <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
                   <input type="text" id="what-jobs" class="mdc-text-field__input">
-                  <label for="what-jobs" class="mdc-floating-label">Keywords</label>
+                  <label for="what-jobs" class="mdc-floating-label">
+                    Keywords
+                  </label>
                   <div class="mdc-line-ripple"></div>
                 </div>
                 <p id="what-jobs-helper-text" class="mdc-text-field-helper-text" aria-hidden="true">
@@ -48,20 +40,12 @@
                 <div id="search-terms" class="mdc-chip-set"></div>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-phone">
-                <!-- <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where" placeholder="">
-                  <label class="mdc-floating-label mdc-floating-label--float-above" for="where">Location</label>
-                  <div class="mdc-notched-outline">
-                    <svg>
-                      <path class="mdc-notched-outline__path"/>
-                    </svg>
-                  </div>
-                  <div class="mdc-notched-outline__idle"></div>
-                </div> -->
                 <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                   <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
                   <input type="text" id="where-jobs" class="mdc-text-field__input" placeholder=" ">
-                  <label for="where-jobs" class="mdc-floating-label">Location</label>
+                  <label for="where-jobs" class="mdc-floating-label">
+                    Location
+                  </label>
                   <div class="mdc-line-ripple"></div>
                 </div>
                 <p id="where-jobs-helper-text" class="mdc-text-field-helper-text" aria-hidden="true">
@@ -78,7 +62,9 @@
                       <option value="80467.2">within 50 miles</option>
                       <option value="any">any distance</option>
                     </select>
-                    <label class="mdc-floating-label mdc-floating-label--float-above" for="distance-jobs">Distance</label>
+                    <label class="mdc-floating-label mdc-floating-label--float-above" for="distance-jobs">
+                      Distance
+                    </label>
                   </div>
                 </div>
               </div>
@@ -95,19 +81,20 @@
           <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
-                <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what-organisations">
-                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what-organisations">Organisations</label>
-                  <div class="mdc-notched-outline">
-                    <svg>
-                      <path class="mdc-notched-outline__path"/>
-                    </svg>
-                  </div>
-                  <div class="mdc-notched-outline__idle"></div>
+                <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+                  <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
+                  <input type="text" id="what-organisations" class="mdc-text-field__input">
+                  <label for="what-organisations" class="mdc-floating-label">
+                    Keywords
+                  </label>
+                  <div class="mdc-line-ripple"></div>
                 </div>
+                <p id="what-organisations-helper-text" class="mdc-text-field-helper-text" aria-hidden="true">
+                  e.g. Shelter, CrossReach, Big Lottery Fund
+                </p>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
-                <button class="mdc-button mdc-button--raised mdc-button--search">
+                <button class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search">
                   Search
                   <span class="far fa-search" aria-hidden="true"></span>
                 </button>
@@ -119,19 +106,20 @@
           <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
-                <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-                  <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what-advice">
-                  <label class="mdc-floating-label mdc-floating-label--float-above" for="what-advice">Advice</label>
-                  <div class="mdc-notched-outline">
-                    <svg>
-                      <path class="mdc-notched-outline__path"/>
-                    </svg>
-                  </div>
-                  <div class="mdc-notched-outline__idle"></div>
+                <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+                  <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
+                  <input type="text" id="what-advice" class="mdc-text-field__input">
+                  <label for="what-advice" class="mdc-floating-label">
+                    Keywords
+                  </label>
+                  <div class="mdc-line-ripple"></div>
                 </div>
+                <p id="what-advice-helper-text" class="mdc-text-field-helper-text" aria-hidden="true">
+                  e.g. CV writing, interview preparation, third sector pay and conditions
+                </p>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
-                <button class="mdc-button mdc-button--raised mdc-button--search">
+                <button class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search">
                   Search
                   <span class="far fa-search" aria-hidden="true"></span>
                 </button>
@@ -175,6 +163,6 @@
       </div>
     </div>
   </div>
-</div>
 
-{{> currently_recruiting}}
+  {{> currently_recruiting}}
+</div>
