--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -845,6 +845,10 @@ body {
     }
     .mdc-button--search {
       width: 100%;
+      .fa-search {
+        position: absolute;
+        right: $unit*.75;
+      }
     }
   }
 }
@@ -852,6 +856,21 @@ body {
 .home-jobs {
   padding: 0 $unit*1.5 $unit !important;
   box-shadow: 0px -3px 5px -1px rgba(0, 0, 0, 0.2), 0px -5px 8px 0px rgba(0, 0, 0, 0.14), 0px -1px 14px 0px rgba(0, 0, 0, 0.12);
+}
+.currently-recruiting {
+  padding: $unit $unit*1.5 $unit !important;
+  box-shadow: 0px -3px 5px -1px rgba(0, 0, 0, 0.2), 0px -5px 8px 0px rgba(0, 0, 0, 0.14), 0px -1px 14px 0px rgba(0, 0, 0, 0.12);
+  background-color: #ededed;
+  .organisation-logo {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    img {
+      max-width: 90%;
+    }
+  }
 }
 
 // Footer ======================================================================
