--- a/db/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/db/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -1,3 +1,18 @@
 <section class="currently-recruiting">
-  <!-- TODO once an organisations type is set up -->
+  <div class="mdc-typography--headline5 v-margin-full">
+    Currently recruiting &ensp; <span class="mdc-typography--caption"><a href="/organisations">See all</a></span>
+  </div>
+  <div class="mdc-layout-grid v-margin-full">
+    <div class="mdc-layout-grid__inner">
+      {{#each data.organisations.currently_recruiting.aggregations.active.job_count.buckets ~}}
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone">
+        {{#with top_hits.hits.hits.[0]._source.organisation}}
+        <a href="/organisation/{{slug}}" title="{{name}}" class="organisation-logo">
+          <img src="{{logo_url}}" />
+        </a>
+        {{/with}}
+      </div>
+      {{/each ~}}
+    </div>
+  </div>
 </section>
