--- a/db/configurations/goodmoves/partials/search-form.hbs
+++ b/db/configurations/goodmoves/partials/search-form.hbs
@@ -34,15 +34,13 @@
     </div>
     <form action="/search" method="GET">
       <div class="h-padding">
-        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
           <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">Keywords</label>
-          <div class="mdc-notched-outline">
-            <svg>
-              <path class="mdc-notched-outline__path"/>
-            </svg>
-          </div>
-          <div class="mdc-notched-outline__idle"></div>
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">
+            Keywords
+          </label>
+          <div class="mdc-line-ripple"></div>
         </div>
       </div>
 
@@ -50,15 +48,13 @@
         <div class="mdc-layout-grid">
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-3-phone">
-              <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+              <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+                <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
                 <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}" placeholder="">
-                <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-location">Location</label>
-                <div class="mdc-notched-outline">
-                  <svg>
-                    <path class="mdc-notched-outline__path"/>
-                  </svg>
-                </div>
-                <div class="mdc-notched-outline__idle"></div>
+                <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-location">
+                  Location
+                </label>
+                <div class="mdc-line-ripple"></div>
               </div>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone">
@@ -83,28 +79,24 @@
       <input type="hidden" name="lng" value="{{request.params.query.lng}}">
 
       <div class="h-padding">
-        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
           <input type="text" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_min">Minimum Salary</label>
-          <div class="mdc-notched-outline">
-            <svg>
-              <path class="mdc-notched-outline__path"/>
-            </svg>
-          </div>
-          <div class="mdc-notched-outline__idle"></div>
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_min">
+            Minimum salary
+          </label>
+          <div class="mdc-line-ripple"></div>
         </div>
       </div>
 
       <div class="h-padding">
-        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
           <input type="text" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_max">Maximum Salary</label>
-          <div class="mdc-notched-outline">
-            <svg>
-              <path class="mdc-notched-outline__path"/>
-            </svg>
-          </div>
-          <div class="mdc-notched-outline__idle"></div>
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_max">
+            Maximum salary
+          </label>
+          <div class="mdc-line-ripple"></div>
         </div>
       </div>
 
