Initial currently recruiting

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -447,10 +447,10 @@ a {
     }
   }
 }
-.mdc-card.list {
-  .mdc-card__info--vacancy-organisation {
-    display: none;
-  }
+
+.top-jobs .top-job,
+.mdc-card.list .mdc-card__info--vacancy-organisation {
+  display: none;
 }
 
 hr {
@@ -840,9 +840,6 @@ body {
     background-color: rgba(255, 255, 255, 0.7);
     padding: $unit $unit*2;
     margin: $unit*3 0;
-    .mdc-select--box {
-      margin-top: 16px;
-    }
     .mdc-button--search {
       width: 100%;
       .fa-search {
@@ -1075,6 +1072,10 @@ footer {
 .b-margin { margin-bottom: $unit/2; }
 .l-margin { margin-left: $unit/2; }
 .r-margin { margin-right: $unit/2; }
+
+.mdc-select--box {
+  margin-top: 16px;
+}
 
 .mdc-select__native-control,
 .mdc-tab-bar--fullwidth {
