--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -448,9 +448,12 @@ a {
   }
 }
 
+.mdc-chip-set {
+  float: left;
+}
 .top-jobs .top-job,
 .mdc-card.list .mdc-card__info--vacancy-organisation {
-  display: none;
+  display: none !important;
 }
 
 hr {
