--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -69,7 +69,7 @@
                 </div>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
-                <button class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search">
+                <button class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search" href="/search">
                   Search
                   <span class="far fa-search" aria-hidden="true"></span>
                 </button>
@@ -94,7 +94,7 @@
                 </p>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
-                <button class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search">
+                <button class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search" href="/search">
                   Search
                   <span class="far fa-search" aria-hidden="true"></span>
                 </button>
@@ -119,7 +119,7 @@
                 </p>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
-                <button class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search">
+                <button class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search" href="/search">
                   Search
                   <span class="far fa-search" aria-hidden="true"></span>
                 </button>
